Update Тестовое задание №2.ipynb

--- a/Тестовые задание №2/Тестовое задание №2.ipynb
+++ b/Тестовые задание №2/Тестовое задание №2.ipynb
@@ -133,7 +133,7 @@
    ],
    "source": [
     "# прочитаем файл и сохраним результат в датафрейме df\n",
-    "df = pd.read_excel('C:/Users/Ильдар/Desktop/Тестовые задания/Задание № 2 (данные).xlsx', sheet_name='№2')\n",
+    "df = pd.read_excel('C:/Users/Задание № 2 (данные).xlsx', sheet_name='№2')\n",
     "\n",
     "df.head() # выведем первые 5 строк таблицы на экран "
    ]
